nx-libs (2:3.5.0.28-0x2go1) UNRELEASED; urgency=medium

  [ Mike Gabriel ]
  * Provide COPYING file in tarball. Update debian/copyright.
  * Add 025_nxcomp-fix-ftbfs-against-jpeg9a.full+lite.patch. Fix FTBFS when
    built against libjpeg9a. Thanks to Gabriel Marcano for sending this in.
    (Fixes: #578).

  [ Nito Martinez ]
  * Add 400_nxcomp-version.full+lite.patch. Allow 4-digit version comparison
    during NX session handshake. (Fixes: #610).

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Mon, 30 Jun 2014 15:05:54 +0200

nx-libs (2:3.5.0.27-0x2go1) unstable; urgency=medium

  * Split up patch 210 (for correct creation nx-libs, nx-libs-lite tarballs):
    + 210_nxagent_save_session_state.full.patch
    + 210_nxcomp_save_session_state.full+lite.patch

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Mon, 30 Jun 2014 14:53:27 +0200

nx-libs (2:3.5.0.26-0x2go1) unstable; urgency=medium

  * Fix patch names:
    + 212_nxcomp_build-on-Android.patch ->
        212_nxcomp_build-on-Android.full+lite.patch
    + 302_nx-X11_xkbbasedir-detection.patch ->
        302_nx-X11_xkbbasedir-detection.full.patch

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Mon, 30 Jun 2014 14:42:51 +0200

nx-libs (2:3.5.0.25-0x2go1) unstable; urgency=low

  [ Mihai Moldovan ]
  * Add 029_nxcomp_ppc64.full+lite.patch. Fix sockaddr handling on
    Big Endian systems (like PPC64). (Fixes: #515).
  * Add 057_nx-X11_sanitize-eventmasks.full.patch. Fix
    failures in session windows coming up on Big Endian systems
    like PPC64. (Fixes: #516).
  * Improve 105_nxagent_export-remote-keyboard-config.full.patch.
    Don't print out nonsensical information, if there really was
    no error when creating the keyboard file or the other way around.
    Also add the reason when failing to create the keyboard file.
    Only print an error message if SessionPath *really* is not defined.
  * Improve 028_nx-X11_abstract-kernel-sockets.full.patch. Make it more