@@ -5,6 +5,10 @@ nx-libs (2:3.5.0.28-0x2go1) UNRELEASED; urgency=medium
   * Add 025_nxcomp-fix-ftbfs-against-jpeg9a.full+lite.patch. Fix FTBFS when
     built against libjpeg9a. Thanks to Gabriel Marcano for sending this in.
     (Fixes: #578).
+  * debian/libnx-x11.postinst:
+    + Don't use dpkg-architecture (bin:package dpkg-dev) in postinst script.
+      Instead prep a libnx-x11.postinst script at build time. (Fixes:
+      #621).
 
   [ Nito Martinez ]
   * Add 400_nxcomp-version.full+lite.patch. Allow 4-digit version comparison
